# shockx

./: .gitignore  CMakeLists.txt
ShockMac/Libraries/: CMakeLists.txt
ShockMac/Libraries/2D/Source/: 2d.h  bit.c  bitmap.c  bitmap.h  blend.c  buffer.c  canvas.c  canvas.h  chain.c  chain.h  cnvdat.h  rgb.h  scrdat.h  valloc.h
ShockMac/Libraries/2D/Source/GR/: grbm.h  grs.h
ShockMac/Libraries/DSTRUCT/Source/: array.c  hash.c  llist.c  llist.h  pqueue.c  rect.c  slist.h
ShockMac/Libraries/FIX/Source/: fix.c  fix.h  fix24.c  fix_pow.c  fix_sqrt.c  fixsprnt.c
ShockMac/Libraries/FIX/Utils/: fmaketab.cpp
ShockMac/Libraries/FIXPP/Source/: fixpp.cpp  fixpp.h
ShockMac/Libraries/H/: lg_types.h
ShockMac/Libraries/LG/Source/: dbg.c  dbg.h  lg.h  lgsprntf.c  lgsprntf.h  memall.c  memall.h  tmpalloc.c
ShockMac/Libraries/PALETTE/Source/: palette.c  palette.h
ShockMac/Libraries/RES/Source/: lzw.c  lzw.h  refacc.c  res.c  res.h  res_.h  resacc.c  resbuild.c  resfile.c  resload.c  resmake.c  restypes.c  restypes.h
ShockMac/Libraries/RND/Source/: rnd.c  rnd.h
ShockMac/test/: CMakeLists.txt  test_fix.c  test_fix24.c  test_main.c  test_rnd.c
